syntax = "proto3";

package elys.clob;

option go_package = "github.com/elys-network/elys/v6/x/clob/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

message SubAccount {
  string owner = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  uint64 id = 2;
  uint64 trade_nounce = 3;
}